unpackaged/main/default/objects/Communications_Content__c/Communications_Content__c.object-meta.xml
<CustomObject>
    <label>Communications Content</label>
    <nameField>
        <displayFormat>CC-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Communications Content</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>