unpackaged/main/default/objects/Communications_Content__c/fields/Body__c.field-meta.xml
<CustomField>
    <fullName>Body__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Body</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>