unpackaged/main/default/objects/Communications_Content__c/fields/Calendar_View_Title__c.field-meta.xml
<CustomField>
    <fullName>Calendar_View_Title__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Calendar View Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>