unpackaged/main/default/objects/Communications_Content__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Content</fullName>
            </value>
            <value>
                <fullName>In-Store Events</fullName>
            </value>
            <value>
                <fullName>Recruitment &amp; Employment</fullName>
            </value>
            <value>
                <fullName>Technology</fullName>
            </value>
            <value>
                <fullName>Promotional Offers</fullName>
            </value>
            <value>
                <fullName>Inventory Updates</fullName>
            </value>
            <value>
                <fullName>WorkWell</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>