unpackaged/main/default/objects/Communications_Content__c/fields/Days_on_home_page_after_end_date__c.field-meta.xml
<CustomField>
    <fullName>Days_on_home_page_after_end_date__c</fullName>
    <label>Days on home page after end date</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>