unpackaged/main/default/objects/Communications_Content__c/fields/Detail_View_Title__c.field-meta.xml
<CustomField>
    <fullName>Detail_View_Title__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Detail View Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>