unpackaged/main/default/objects/Communications_Content__c/fields/Disable_Comments__c.field-meta.xml
<CustomField>
    <fullName>Disable_Comments__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable Comments</label>
    <type>Checkbox</type>
</CustomField>