unpackaged/main/default/objects/Communications_Content__c/fields/Exclude_from_Search__c.field-meta.xml
<CustomField>
    <fullName>Exclude_from_Search__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exclude from Search</label>
    <type>Checkbox</type>
</CustomField>