unpackaged/main/default/objects/Communications_Content__c/fields/Expiration_date_time__c.field-meta.xml
<CustomField>
    <fullName>Expiration_date_time__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Expiration Date Time</label>
    <type>DateTime</type>
</CustomField>