unpackaged/main/default/objects/Communications_Content__c/fields/Is_Navigation_Content__c.field-meta.xml
<CustomField>
    <fullName>Is_Navigation_Content__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Navigation Content</label>
    <type>Checkbox</type>
</CustomField>