unpackaged/main/default/objects/Communications_Content__c/fields/Parent_Comm_Content__c.field-meta.xml
<CustomField>
    <fullName>Parent_Comm_Content__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Comm Content</label>
    <referenceTo>Communications_Content__c</referenceTo>
    <relationshipLabel>Child Communications Content</relationshipLabel>
    <relationshipName>Communications_Content</relationshipName>
    <type>Lookup</type>
</CustomField>