unpackaged/main/default/objects/Communications_Content__c/fields/Publish_Date__c.field-meta.xml
<CustomField>
    <fullName>Publish_Date__c</fullName>
    <formula>DATEVALUE(Publish_DateTime__c)</formula>
    <label>Publish Date</label>
    <type>Date</type>
</CustomField>