unpackaged/main/default/objects/Communications_Content__c/fields/Publish_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Publish_DateTime__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Publish DateTime</label>
    <type>DateTime</type>
</CustomField>