unpackaged/main/default/objects/Communications_Content__c/fields/Published_Body__c.field-meta.xml
<CustomField>
    <fullName>Published_Body__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Published Body</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>