unpackaged/main/default/objects/Communications_Content__c/fields/PublishedTitle__c.field-meta.xml
<CustomField>
    <fullName>PublishedTitle__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Published Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>