unpackaged/main/default/objects/Communications_Content__c/fields/Vimeo_Link__c.field-meta.xml
<CustomField>
    <fullName>Vimeo_Link__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Vimeo Link</label>
    <type>Url</type>
</CustomField>