unpackaged/main/default/objects/Communications_Content__c/fields/Workflow_stage__c.field-meta.xml
<CustomField>
    <fullName>Workflow_stage__c</fullName>
    <label>Workflow stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Ready for Review</fullName>
            </value>
            <value>
                <fullName>Ready for Approval</fullName>
            </value>
            <value>
                <fullName>Published</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>