unpackaged/main/default/objects/Communications_Content__c/recordTypes/Content.recordType-meta.xml
<RecordType>
    <fullName>Content</fullName>
    <active>true</active>
    <label>Content</label>
</RecordType>