unpackaged/main/default/objects/Communications_Content__c/recordTypes/Menu_Item.recordType-meta.xml
<RecordType>
    <fullName>Menu_Item</fullName>
    <active>true</active>
    <label>Menu Item</label>
</RecordType>