unpackaged/main/default/objects/Communications_Content__c/recordTypes/Message.recordType-meta.xml
<RecordType>
    <fullName>Message</fullName>
    <active>true</active>
    <label>Message</label>
</RecordType>