unpackaged/main/default/objects/Communications_Content__c/recordTypes/Task.recordType-meta.xml
<RecordType>
    <fullName>Task</fullName>
    <active>true</active>
    <label>Task</label>
</RecordType>