unpackaged/main/default/objects/Communications_Content__c/listViews/Content.listView-meta.xml
<ListView>
    <fullName>Content</fullName>
    <columns>NAME</columns>
    <columns>Workflow_stage__c</columns>
    <columns>Category__c</columns>
    <columns>Published__c</columns>
    <columns>Publish_DateTime__c</columns>
    <columns>Expiration_date_time__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Communications_Content__c.Content</value>
    </filters>
    <label>Content</label>
    <language>en_US</language>
</ListView>