unpackaged/main/default/objects/Communications_Content__c/listViews/Content_Approval_Queue.listView-meta.xml
<ListView>
    <fullName>Content_Approval_Queue</fullName>
    <columns>NAME</columns>
    <columns>Workflow_stage__c</columns>
    <columns>Category__c</columns>
    <columns>Published__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Queue</filterScope>
    <label>Content Approval Queue</label>
    <queue>Communication_Content_Approval</queue>
</ListView>