unpackaged/main/default/objects/Communications_Content__c/listViews/Content_Review_Queue.listView-meta.xml
<ListView>
    <fullName>Content_Review_Queue</fullName>
    <columns>NAME</columns>
    <columns>Workflow_stage__c</columns>
    <columns>Category__c</columns>
    <columns>Published__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Queue</filterScope>
    <label>Content Review Queue</label>
    <queue>Content_Review_Queue</queue>
</ListView>