unpackaged/main/default/objects/Communications_Content__c/listViews/Tasks.listView-meta.xml
<ListView>
    <fullName>Tasks</fullName>
    <columns>NAME</columns>
    <columns>Publish_DateTime__c</columns>
    <columns>Expiration_date_time__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>Published__c</columns>
    <columns>PublishedTitle__c</columns>
    <columns>Days_on_home_page_after_end_date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Communications_Content__c.Task</value>
    </filters>
    <label>Tasks</label>
    <language>en_US</language>
</ListView>